--- a/Project/Client/imgui.ini
+++ b/Project/Client/imgui.ini
@@ -25,8 +25,31 @@ Pos=66,49
 Size=570,126
 Collapsed=0
 
+[Window][Content##Content]
+Pos=964,354
+Size=252,216
+Collapsed=0
+DockId=0x00000008,0
+
+[Window][Inspector##Inspector]
+Pos=964,215
+Size=252,137
+Collapsed=0
+DockId=0x00000006,0
+
+[Window][Outliner##Outliner]
+Pos=964,72
+Size=252,141
+Collapsed=0
+DockId=0x00000005,0
+
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=1404,492 Size=338,503 Split=Y
-  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=350,417 Selected=0xE87781F4
-  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=350,261 Selected=0x18B0E82D
+DockNode      ID=0x00000001 Pos=1404,492 Size=338,503 Split=Y
+  DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=350,417 Selected=0xE87781F4
+  DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=350,261 Selected=0x18B0E82D
+DockNode      ID=0x00000004 Pos=1604,443 Size=252,498 Split=Y
+  DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=196,262 Split=Y
+    DockNode  ID=0x00000005 Parent=0x00000007 SizeRef=196,132 Selected=0x81F08B44
+    DockNode  ID=0x00000006 Parent=0x00000007 SizeRef=196,128 Selected=0xE5053174
+  DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=196,202 Selected=0xB61D20C0
 
