CComponentUI 클래스 추가, CTransformUI 클래스 추가 및 적용

--- a/Project/Client/Client.vcxproj
+++ b/Project/Client/Client.vcxproj
@@ -144,13 +144,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CAssetUI.h" />
     <ClInclude Include="CContent.h" />
     <ClInclude Include="CImGuiMgr.h" />
     <ClInclude Include="CInspector.h" />
     <ClInclude Include="Client.h" />
     <ClInclude Include="CComponentUI.h" />
+    <ClInclude Include="CMeshRenderUI.h" />
     <ClInclude Include="COutliner.h" />
     <ClInclude Include="COverlay.h" />
+    <ClInclude Include="CTransformUI.h" />
     <ClInclude Include="CUI.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="imgui\imconfig.h" />
@@ -167,13 +170,16 @@
     <ClInclude Include="value_client.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CAssetUI.cpp" />
     <ClCompile Include="CContent.cpp" />
     <ClCompile Include="CImGuiMgr.cpp" />
     <ClCompile Include="CInspector.cpp" />
     <ClCompile Include="Client.cpp" />
     <ClCompile Include="CComponentUI.cpp" />
+    <ClCompile Include="CMeshRenderUI.cpp" />
     <ClCompile Include="COutliner.cpp" />
     <ClCompile Include="COverlay.cpp" />
+    <ClCompile Include="CTransformUI.cpp" />
     <ClCompile Include="CUI.cpp" />
     <ClCompile Include="enum_client.h" />
     <ClCompile Include="imgui\imgui.cpp" />
