--- a/Project/Client/Client.vcxproj.filters
+++ b/Project/Client/Client.vcxproj.filters
@@ -41,11 +41,17 @@
     <Filter Include="UI\Overlay">
       <UniqueIdentifier>{a4c56479-5697-4106-860c-31b99b203d2a}</UniqueIdentifier>
     </Filter>
-    <Filter Include="UI\Inspector\AssetUI">
+    <Filter Include="UI\AssetUI">
       <UniqueIdentifier>{b832d488-1927-4a20-8329-d5b798d9d88b}</UniqueIdentifier>
     </Filter>
-    <Filter Include="UI\Inspector\ComponentUI">
+    <Filter Include="UI\ComponentUI">
       <UniqueIdentifier>{f80eb86c-60e7-41ca-b71a-0f8e17ba7579}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="UI\ComponentUI\TransformUI">
+      <UniqueIdentifier>{c5be5806-c4c0-4636-b2f8-6e02a9e4d758}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="UI\ComponentUI\MeshRenderUI">
+      <UniqueIdentifier>{d1944b2c-c4e3-41e1-bb9a-8a36618c0408}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -107,10 +113,19 @@
       <Filter>UI\Content</Filter>
     </ClInclude>
     <ClInclude Include="CComponentUI.h">
-      <Filter>UI\Inspector\ComponentUI</Filter>
+      <Filter>UI\ComponentUI</Filter>
     </ClInclude>
     <ClInclude Include="COverlay.h">
       <Filter>UI\Overlay</Filter>
+    </ClInclude>
+    <ClInclude Include="CTransformUI.h">
+      <Filter>UI\ComponentUI\TransformUI</Filter>
+    </ClInclude>
+    <ClInclude Include="CAssetUI.h">
+      <Filter>UI\AssetUI</Filter>
+    </ClInclude>
+    <ClInclude Include="CMeshRenderUI.h">
+      <Filter>UI\ComponentUI\MeshRenderUI</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -173,10 +188,19 @@
       <Filter>UI\Overlay</Filter>
     </ClCompile>
     <ClCompile Include="CComponentUI.cpp">
-      <Filter>UI\Inspector\ComponentUI</Filter>
+      <Filter>UI\ComponentUI</Filter>
+    </ClCompile>
+    <ClCompile Include="CTransformUI.cpp">
+      <Filter>UI\ComponentUI\TransformUI</Filter>
+    </ClCompile>
+    <ClCompile Include="CAssetUI.cpp">
+      <Filter>UI\AssetUI</Filter>
+    </ClCompile>
+    <ClCompile Include="CMeshRenderUI.cpp">
+      <Filter>UI\ComponentUI\MeshRenderUI</Filter>
     </ClCompile>
     <ClCompile Include="enum_client.h">
-      <Filter>01.Header\pch</Filter>
+      <Filter>01.Header</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
