--- a/Project/Client/imgui.ini
+++ b/Project/Client/imgui.ini
@@ -1,5 +1,6 @@
 [Window][Debug##Default]
-Pos=60,60
+ViewportPos=183,808
+ViewportId=0x9F5F46A1
 Size=400,400
 Collapsed=0
 
@@ -7,18 +8,18 @@ Collapsed=0
 Pos=928,36
 Size=338,503
 Collapsed=0
-DockId=0x00000003,0
 
 [Window][Dear ImGui Demo]
-Pos=928,36
-Size=338,503
+ViewportPos=383,939
+ViewportId=0xE927CF2F
+Size=1280,283
 Collapsed=0
-DockId=0x00000002,0
 
 [Window][Hello, world!]
-Pos=32,168
-Size=339,180
+Pos=899,370
+Size=381,350
 Collapsed=0
+DockId=0x0000000A,0
 
 [Window][About Dear ImGui]
 Pos=66,49
@@ -26,30 +27,53 @@ Size=570,126
 Collapsed=0
 
 [Window][Content##Content]
-Pos=964,354
-Size=252,216
-Collapsed=0
-DockId=0x00000008,0
-
-[Window][Inspector##Inspector]
-Pos=964,215
-Size=252,137
+Pos=899,183
+Size=381,85
 Collapsed=0
 DockId=0x00000006,0
 
-[Window][Outliner##Outliner]
-Pos=964,72
-Size=252,141
+[Window][Inspector##Inspector]
+Pos=899,19
+Size=381,162
 Collapsed=0
 DockId=0x00000005,0
 
+[Window][Outliner##Outliner]
+Pos=899,270
+Size=381,98
+Collapsed=0
+DockId=0x00000009,0
+
+[Window][ViewUI##ViewUI]
+Pos=0,19
+Size=897,701
+Collapsed=0
+DockId=0x00000001,0
+
+[Window][DockSpace Demo]
+Pos=0,0
+Size=1280,720
+Collapsed=0
+
+[Window][Gizmo]
+ViewportPos=400,20
+ViewportId=0x3EE74F68
+Size=800,400
+Collapsed=0
+
+[Window][Overlay##Overlay]
+Pos=62,62
+Size=224,81
+Collapsed=0
+
 [Docking][Data]
-DockNode      ID=0x00000001 Pos=1404,492 Size=338,503 Split=Y
-  DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=350,417 Selected=0xE87781F4
-  DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=350,261 Selected=0x18B0E82D
-DockNode      ID=0x00000004 Pos=1604,443 Size=252,498 Split=Y
-  DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=196,262 Split=Y
-    DockNode  ID=0x00000005 Parent=0x00000007 SizeRef=196,132 Selected=0x81F08B44
-    DockNode  ID=0x00000006 Parent=0x00000007 SizeRef=196,128 Selected=0xE5053174
-  DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=196,202 Selected=0xB61D20C0
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=692,433 Size=1280,701 Split=X Selected=0x8C122D9B
+  DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=897,701 CentralNode=1 HiddenTabBar=1 Selected=0x8C122D9B
+  DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=381,701 Split=Y Selected=0xE5053174
+    DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=320,249 Split=Y Selected=0xE5053174
+      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=320,162 Selected=0xE5053174
+      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=320,85 Selected=0xB61D20C0
+    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=320,450 Split=Y Selected=0x81F08B44
+      DockNode  ID=0x00000009 Parent=0x00000004 SizeRef=435,98 Selected=0x81F08B44
+      DockNode  ID=0x0000000A Parent=0x00000004 SizeRef=435,350 Selected=0xD00C9CD4
 
