--- a/Project/Client/imgui.ini
+++ b/Project/Client/imgui.ini
@@ -10,16 +10,16 @@ Size=338,503
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=383,939
+ViewportPos=456,897
 ViewportId=0xE927CF2F
-Size=1280,283
+Size=537,437
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=899,370
-Size=381,350
+ViewportPos=1069,936
+ViewportId=0xEBE6C6E6
+Size=323,238
 Collapsed=0
-DockId=0x0000000A,0
 
 [Window][About Dear ImGui]
 Pos=66,49
@@ -27,28 +27,28 @@ Size=570,126
 Collapsed=0
 
 [Window][Content##Content]
-Pos=899,183
-Size=381,85
+Pos=927,534
+Size=353,186
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Inspector##Inspector]
-Pos=899,19
-Size=381,162
+Pos=927,19
+Size=353,234
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000007,0
 
 [Window][Outliner##Outliner]
-Pos=899,270
-Size=381,98
+Pos=927,255
+Size=353,277
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x00000008,0
 
 [Window][ViewUI##ViewUI]
 Pos=0,19
-Size=897,701
+Size=925,701
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000003,0
 
 [Window][DockSpace Demo]
 Pos=0,0
@@ -66,14 +66,17 @@ Pos=62,62
 Size=224,81
 Collapsed=0
 
+[Window][Another Window]
+Pos=60,60
+Size=198,71
+Collapsed=0
+
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=692,433 Size=1280,701 Split=X Selected=0x8C122D9B
-  DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=897,701 CentralNode=1 HiddenTabBar=1 Selected=0x8C122D9B
-  DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=381,701 Split=Y Selected=0xE5053174
-    DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=320,249 Split=Y Selected=0xE5053174
-      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=320,162 Selected=0xE5053174
-      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=320,85 Selected=0xB61D20C0
-    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=320,450 Split=Y Selected=0x81F08B44
-      DockNode  ID=0x00000009 Parent=0x00000004 SizeRef=435,98 Selected=0x81F08B44
-      DockNode  ID=0x0000000A Parent=0x00000004 SizeRef=435,350 Selected=0xD00C9CD4
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=640,390 Size=1280,701 Split=X Selected=0x8C122D9B
+  DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=925,701 HiddenTabBar=1 Selected=0x8C122D9B
+  DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=353,701 Split=Y Selected=0xE5053174
+    DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=641,513 Split=Y Selected=0xE5053174
+      DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=641,234 CentralNode=1 Selected=0xE5053174
+      DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=641,277 HiddenTabBar=1 Selected=0x81F08B44
+    DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=641,186 Selected=0xB61D20C0
 
