--- a/Project/Client/imgui.ini
+++ b/Project/Client/imgui.ini
@@ -26,33 +26,33 @@ Size=570,126
 Collapsed=0
 
 [Window][Content##Content]
-Pos=941,534
-Size=339,186
+Pos=860,291
+Size=420,137
+Collapsed=0
+DockId=0x00000005,0
+
+[Window][Inspector##Inspector]
+Pos=860,19
+Size=420,270
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][Outliner##Outliner]
+Pos=860,430
+Size=420,290
 Collapsed=0
 DockId=0x00000006,0
 
-[Window][Inspector##Inspector]
-Pos=941,38
-Size=339,223
+[Window][ViewUI##ViewUI]
+Pos=0,19
+Size=858,701
 Collapsed=0
 DockId=0x00000001,0
-
-[Window][Outliner##Outliner]
-Pos=941,263
-Size=339,269
-Collapsed=0
-DockId=0x00000002,0
-
-[Window][ViewUI##ViewUI]
-Pos=0,38
-Size=939,682
-Collapsed=0
-DockId=0x00000003,0
 
 [Window][DockSpace Demo]
 Pos=0,0
 Size=1280,720
-Collapsed=1
+Collapsed=0
 
 [Window][Gizmo]
 ViewportPos=400,20
@@ -71,11 +71,11 @@ Size=198,71
 Collapsed=0
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=640,409 Size=1280,682 Split=X Selected=0x8C122D9B
-  DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=939,701 HiddenTabBar=1 Selected=0x8C122D9B
-  DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=339,701 Split=Y Selected=0xE5053174
-    DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=641,513 Split=Y Selected=0xE5053174
-      DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=353,223 Selected=0xE5053174
-      DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=353,288 CentralNode=1 Selected=0x81F08B44
-    DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=641,186 Selected=0xB61D20C0
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=640,390 Size=1280,701 Split=X Selected=0x8C122D9B
+  DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=858,497 HiddenTabBar=1 Selected=0x8C122D9B
+  DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=420,497 Split=Y
+    DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=633,270 Selected=0xE5053174
+    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=633,429 Split=Y
+      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=633,137 Selected=0xB61D20C0
+      DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=633,290 CentralNode=1 Selected=0x81F08B44
 
