--- a/Project/Client/Client.vcxproj.filters
+++ b/Project/Client/Client.vcxproj.filters
@@ -59,6 +59,9 @@
     <Filter Include="UI\View">
       <UniqueIdentifier>{d6b9b2e5-de26-416e-a909-ce38eaa34636}</UniqueIdentifier>
     </Filter>
+    <Filter Include="UI\List">
+      <UniqueIdentifier>{30a575cc-5a18-4dbb-bdf4-97a0c8d02110}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -154,6 +157,9 @@
     <ClInclude Include="value_client.h">
       <Filter>01.Header</Filter>
     </ClInclude>
+    <ClInclude Include="CListUI.h">
+      <Filter>UI\List</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Client.rc">
@@ -246,6 +252,9 @@
     </ClCompile>
     <ClCompile Include="CViewUI.cpp">
       <Filter>UI\View</Filter>
+    </ClCompile>
+    <ClCompile Include="CListUI.cpp">
+      <Filter>UI\List</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
